@@ -113,6 +113,7 @@ protected:
     virtual void DoSetItemClientObject(int n, wxClientData* clientData);
     virtual wxClientData* DoGetItemClientObject(int n) const;
     virtual void DoSetSize(int x, int y, int width, int height, int sizeFlags = wxSIZE_AUTO);
+    virtual int DoListHitTest(const wxPoint& point) const;
 
     void            MacDelete( int n ) ;
     void            MacInsert( int n , const wxString& item) ;
